# CV-CUDA

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.cvcuda  README.md  index.rst  init_repo.sh
docs/: CMakeLists.txt  Doxyfile.in  installation.rst  perf_benchmark.rst
docs/design/: .gitignore  .vimrc  Makefile  allocator_classes.puml  image_classes.puml  image_data_classes.puml  image_data_future_classes.puml  image_future_classes.puml  resource_allocator_classes.puml
docs/sphinx/: conf.py  cpp_modules.rst  generate_groups.py  getting_started.rst  index.rst  installation.rst  pkg_scripts.js
python/: Assert.cpp  Assert.hpp  BorderType.cpp  BorderType.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  CheckError.cpp  CheckError.hpp  ColorConversionCode.cpp  ColorConversionCode.hpp  Container.cpp  Container.hpp  CudaBuffer.cpp  CudaBuffer.hpp  DataType.cpp  DataType.hpp  Hash.hpp  Image.cpp  Image.hpp  ImageBatch.cpp  ImageBatch.hpp  ImageFormat.cpp  ImageFormat.hpp  InterpolationType.cpp  InterpolationType.hpp  LockMode.hpp  Main.cpp  MorphologyType.cpp  MorphologyType.hpp  Object.cpp  Object.hpp  OpAverageBlur.cpp  OpBilateralFilter.cpp  OpCenterCrop.cpp  OpChannelReorder.cpp  OpComposite.cpp  OpConv2D.cpp  OpConvertTo.cpp  OpCopyMakeBorder.cpp  (+39 more)
python/common/: Assert.cpp  Assert.hpp  CMakeLists.txt  CheckError.cpp  CheckError.hpp  Hash.hpp  PyUtil.cpp  PyUtil.hpp  String.cpp  String.hpp
python/core/: CMakeLists.txt  Cache.cpp  CudaBuffer.cpp  DataType.cpp  DataType.hpp  Image.hpp  ImageBatch.cpp  ImageBatch.hpp  ImageFormat.cpp  LockMode.hpp  Main.cpp  Object.hpp  ResourceGuard.hpp  Stream.cpp  Stream.hpp  StreamStack.hpp  Tensor.cpp  Tensor.hpp
python/mod_core/: CAPI.cpp  CAPI.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  Container.cpp  Container.hpp  CudaBuffer.cpp  CudaBuffer.hpp  DataType.cpp  DataType.hpp  Image.cpp  Image.hpp  ImageBatch.cpp  ImageBatch.hpp  ImageFormat.cpp  ImageFormat.hpp  LockMode.hpp  Main.cpp  Rect.cpp  Resource.cpp  Resource.hpp  ResourceGuard.cpp  ResourceGuard.hpp  Size.hpp  Stream.cpp  Stream.hpp  StreamStack.hpp  Tensor.cpp  Tensor.hpp
python/mod_cvcuda/: BorderType.cpp  CMakeLists.txt  ColorConversionCode.cpp  InterpolationType.cpp  Main.cpp  MorphologyType.cpp  OpAdaptiveThreshold.cpp  OpAverageBlur.cpp  OpBilateralFilter.cpp  OpBndBox.cpp  OpBoxBlur.cpp  OpCenterCrop.cpp  OpChannelReorder.cpp  OpColorTwist.cpp  OpComposite.cpp  OpConv2D.cpp  OpConvertTo.cpp  OpCopyMakeBorder.cpp  OpCropFlipNormalizeReformat.cpp  OpCustomCrop.cpp  OpCvtColor.cpp  OpErase.cpp  OpFlip.cpp  OpGammaContrast.cpp  OpGaussian.cpp  OpGaussianNoise.cpp  OpInpaint.cpp  OpJointBilateralFilter.cpp  OpLaplacian.cpp  OpMedianBlur.cpp  OpMinMaxLoc.cpp  OpMorphology.cpp  OpNormalize.cpp  OpPadAndStack.cpp  OpPillowResize.cpp  OpReformat.cpp  OpRemap.cpp  OpResize.cpp  OpRotate.cpp  OpSIFT.cpp  (+7 more)
python/mod_nvcv/: CAPI.cpp  CMakeLists.txt  Cache.cpp  Container.hpp  CudaBuffer.cpp  DataType.cpp  ExternalBuffer.cpp  ExternalBuffer.hpp  Image.cpp  Image.hpp  ImageBatch.cpp  ImageBatch.hpp  ImageFormat.hpp  Main.cpp  Object.cpp  Object.hpp  OsdElement.cpp  OsdElement.hpp  Rect.cpp  Rect.hpp  Resource.hpp  Stream.cpp  Stream.hpp  StreamStack.cpp  Tensor.cpp  Tensor.hpp
python/mod_operators/: BorderType.hpp  CMakeLists.txt  ColorConversionCode.cpp  InterpolationType.hpp  Main.cpp  MorphologyType.cpp  OpAverageBlur.cpp  OpBilateralFilter.cpp  OpCenterCrop.cpp  OpChannelReorder.cpp  OpComposite.cpp  OpConv2D.cpp  OpConvertTo.cpp  OpCopyMakeBorder.cpp  OpCustomCrop.cpp  OpCvtColor.cpp  OpErase.cpp  OpFlip.cpp  OpGammaContrast.cpp  OpGaussian.cpp  OpLaplacian.cpp  OpMedianBlur.cpp  OpMorphology.cpp  OpNormalize.cpp  OpPadAndStack.cpp  OpPillowResize.cpp  OpReformat.cpp  OpResize.cpp  OpRotate.cpp  OpWarpAffine.cpp  OpWarpPerspective.cpp  Operators.hpp
python/operators/: CMakeLists.txt  Main.cpp  OpAverageBlur.cpp  OpBilateralFilter.cpp  OpCenterCrop.cpp  OpChannelReorder.cpp  OpComposite.cpp  OpConv2D.cpp  OpConvertTo.cpp  OpCopyMakeBorder.cpp  OpCustomCrop.cpp  OpCvtColor.cpp  OpErase.cpp  OpFlip.cpp  OpGammaContrast.cpp  OpGaussian.cpp  OpLaplacian.cpp  OpMedianBlur.cpp  OpMorphology.cpp  OpNormalize.cpp  OpPadAndStack.cpp  OpPillowResize.cpp  OpReformat.cpp  OpResize.cpp  OpRotate.cpp  OpWarpAffine.cpp  OpWarpPerspective.cpp  Operators.hpp
samples/: CMakeLists.txt  ConfigTensorRT.cmake  NOTICE.md  README.md
samples/assets/: image_details.txt
samples/classification/: CMakeLists.txt  ClassificationUtils.hpp  Main.cpp
samples/common/: CMakeLists.txt  NvDecoder.cpp  NvDecoder.h  TRTUtils.cpp  TRTUtils.h  TestUtils.h
samples/cropandresize/: CMakeLists.txt  Main.cpp
samples/scripts/: build_samples.sh  export_resnet.py  install_dependencies.sh  run_samples.sh  serialize_models.sh
src/: Allocator.cpp  CMakeLists.txt  ColorSpec.cpp  Config.cpp  DataLayout.cpp  DataType.cpp  Foo.cu  Image.cpp  ImageBatch.cpp  ImageFormat.cpp  MemAllocator.cpp  PixelType.cpp  Requirements.cpp  Status.cpp  Tensor.cpp  TensorData.cpp  TensorLayout.cpp  TensorShape.cpp  Version.cpp
src/core/: Allocator.cpp  CMakeLists.txt  ColorSpec.cpp  Config.cpp  DataLayout.cpp  DataType.cpp  Image.cpp  ImageBatch.cpp  ImageFormat.cpp  Requirements.cpp  Status.cpp  Tensor.cpp  TensorLayout.cpp  TensorShape.cpp  Version.cpp
src/cvcuda/: CMakeLists.txt  OpAdaptiveThreshold.cpp  OpBndBox.cpp  OpBoxBlur.cpp  OpCropFlipNormalizeReformat.cpp  OpGaussianNoise.cpp  OpHistogram.cpp  OpInpaint.cpp  OpJointBilateralFilter.cpp  OpRemap.cpp  OpThreshold.cpp  Operator.cpp
src/format/: CMakeLists.txt  ColorSpec.cpp  DataType.cpp  ImageFormat.cpp
src/nvcv_types/: Allocator.cpp  Image.cpp  ImageBatch.cpp  ImageFormat.cpp  Tensor.cpp
src/operators/: CMakeLists.txt  OpAverageBlur.cpp  OpBilateralFilter.cpp  OpCenterCrop.cpp  OpChannelReorder.cpp  OpComposite.cpp  OpConv2D.cpp  OpConvertTo.cpp  OpCopyMakeBorder.cpp  OpCustomCrop.cpp  OpCvtColor.cpp  OpErase.cpp  OpFlip.cpp  (+14 more)
tests/: CMakeLists.txt  Main.cpp  run_tests.sh.in
(+1130 files in other folders)
